<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="Capstone">Capstone</string>
    <string name="Ubiquitous">Go Ubiquitous</string>
    <string name="Material">Make Your App Material</string>
    <string name="Bigger">Build It Bigger</string>
    <string name="StockHawk">Stock Hawk</string>
    <string name="Popular">Popular Movies</string>
    <string name="nanodegree_apps">My Nanodegree Apps!</string>
</resources>
