<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.arejaysmith.myappportfolio.PortfolioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nanodegree_apps"/>

        <Button
            android:id="@+id/popular_movies"
            style="@style/GeneralButton"
            android:text="@string/Popular"/>

        <Button
            android:id="@+id/stock_hawk"
            style="@style/GeneralButton"
            android:text="@string/StockHawk"/>

        <Button
            android:id="@+id/build_it_bigger"
            style="@style/GeneralButton"
            android:text="@string/Bigger"/>

        <Button
            android:id="@+id/material"
            style="@style/GeneralButton"
            android:text="@string/Material"/>

        <Button
            android:id="@+id/go_ubiquitous"
            style="@style/GeneralButton"
            android:text="@string/Ubiquitous"/>

        <Button
            android:id="@+id/capstone"
            style="@style/GeneralButton"
            android:text="@string/Capstone"/>


    </LinearLayout>

    </ScrollView>

    </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
